--- a/Dominoes/Dominoes.csproj
+++ b/Dominoes/Dominoes.csproj
@@ -62,6 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UI\Animation.cs" />
     <Compile Include="DominoRoot.cs" />
     <Compile Include="View\MenuView.xaml.cs">
       <DependentUpon>MenuView.xaml</DependentUpon>
@@ -70,7 +71,6 @@
       <DependentUpon>GameFieldView.xaml</DependentUpon>
     </Compile>
     <Compile Include="State\DirectionMove.cs" />
-    <Compile Include="State\MoveState.cs" />
     <Compile Include="UI\BotUI.cs" />
     <Compile Include="UI\ImageDomino.cs" />
     <Compile Include="UI\PlayerUI.cs" />
